--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mcp-communicator-telegram",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "MCP server for communicating with users through Telegram bots",
   "main": "build/index.js",
   "type": "commonjs",
@@ -44,13 +44,16 @@
   "author": "qpd-v",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
-    "dotenv": "^16.3.1"
+    "archiver": "^7.0.1",
+    "dotenv": "^16.3.1",
+    "ignore": "^7.0.3",
+    "node-telegram-bot-api": "^0.64.0"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/node": "^20.10.5",
     "@types/node-telegram-bot-api": "^0.64.1",
-    "typescript": "^5.3.3",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.3.3"
   }
 }
